# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "raytracing"
version = "0.1.0"
edition = "2018"

[lib]
name = "raytracing"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
approx = "0.5.0"
quickcheck = "1"
quickcheck_macros = "1"
proptest = "1.0.0"