# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "raytracing"
version = "0.1.0"
edition = "2018"
default-run = "main"

[lib]
name = "raytracing"
path = "src/lib.rs"

[dependencies]
rand = "0.8.3"

[dev-dependencies]
approx = "0.5.0"
proptest = "1.0.0"